app/assets/stylesheets/components/sidebar.scss
.sidebar {
  position: relative;
  box-sizing: border-box;
  flex: 0 0 240px;
  background-color: $gray-purple;
  min-height: 100vh;
  height: 100%;
  float: left;
  z-index: 1;
  padding: 24px;
  padding-top: 104px;
  overflow-y: auto;
  overflow-x: hidden;
  text-overflow: ellipsis;

  >div {
    height: auto;
    i {
      color: $light-purple;
      position: absolute;
      left: 174px;
      top: -2px;
    }

    &:hover {
      h3, i {
        color: white;
      }
      cursor: pointer;
    }

  }

  h3 {
    text-transform: uppercase;
    font-size: 12px;
    color: $light-purple;
    margin-bottom: 8px;
  }

  ul {
    margin-bottom: 32px;
  }

  li {
    color: $light-purple;
    padding: 4px;
    border-radius: 4px;
    white-space: nowrap;
    text-overflow: ellipsis;

    &:hover {
      background-color: $darker-purple;
      cursor: pointer;

      i {
        display: block;
      }
    }
    div {
      float: right;
    }
    i {
      color: $gray-purple;
      display: none;
      &:hover {
        cursor: pointer;
        color: white;
      }
    }
  }
}

.channel-detail {
  box-sizing: border-box;
  height: auto;
  width: auto;
  padding-bottom: 24px;
  margin-bottom: 32px;
  border-bottom: 1px solid $transparent-purple;
  text-overflow: ellipsis;

  h4 {
    margin-bottom: 8px;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  p {
    color: $light-purple;
  }

  i {
    float: left;
    color: $light-purple;
    margin-right: 8px;
  }
}

